0.6.0 (currently working on)
- [#1406] Feature: Add a switch to always sort the list view by category
- [#1616] Change: Add a conflict with DBAL and mention this in the manual
- [#1407] Feature: Allow filtering the list view by categories
- [#1581] Feature: Allow to set time-frames for seminar bag builders
- [#1730] Change: Make the teaser field an RTE field
- [#1662] Change: Test the bag builder with an empty string for the source pages (with 0 and > 0 for recursion)
- [#1626] Fix: MySQL error in countdown view
- [#1656] Fix: Label "language" is not removed from single view if no language is defined
- [#1666] Fix: CSV export of events is broken
- [#1714] Fix: pi_getLL copied from oelib breaks BE localization of seminars in mod2
- [#1627] Feature: Use the file with common constants from oelib
- [#1094] Change: Add a function "setSubpart" and remove the direct accesses to $this->templateCache
- [#1467] Feature: Allow setting categories in the FE editing, patch by John Boyd-Rainey
- [#1598] Feature: The pi1 search should also search in the category names, patch by John Boyd-Rainey
- [#1655] Fix: Wrong <dl> in HTML output
- [#1663] Change: Removed suggestion for newloginbox
- [#1104] Change: Use type hinting for function parameters
- [#999] Change: Require PHP 5.1
- [#1593] Feature: Allow sorting the pi1 list view by category title
- [#1620] Feature: Allow to specify a link target for external links
- [#1621] Change: Link the date only in the "other dates for this topic" list
- [#1623] Feature: Add a field "skills" to the speaker record
- [#1619] Fix: Time-slots are not sorted in front-end
- [#1348] Feature: Make hideSearchForm working with the Selector Widget
- [#1599] Feature: Add a function getMarker()
- [#1596] Fix: Confirmation mail: Lodging options not shown
- [#1592] Change: Skip some queries when we know that the result will be empty beforehand
- [#1588] Fix: SQL warning in the EM about the language and country